--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ seaborn>=0.12.0
 rdkit-pypi>=2023.9.1
 tqdm>=4.65.0
 tabulate>=0.9.0
+tensorflow>=2.15.0   # Path Foundation model (ViT-S)
+Pillow>=10.0.0       # Image processing for pathology patches
