--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ tqdm>=4.65.0
 tabulate>=0.9.0
 tensorflow>=2.15.0   # Path Foundation model (ViT-S)
 Pillow>=10.0.0       # Image processing for pathology patches
+deepchem>=2.7.0      # Graph neural network molecular properties
+requests>=2.31.0     # AlphaFold DB API access
